# ChangeLog for sci-astronomy/allphot
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*allphot-0.8.0 (29 Feb 2012)

  29 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org> -allphot-0.7.0.ebuild,
  +allphot-0.8.0.ebuild:
  Version bump

*allphot-0.7.0 (03 Aug 2011)

  03 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> -allphot-0.2.3.ebuild,
  +allphot-0.7.0.ebuild:
  Version bump. Public version
