@@ -1,4 +1,14 @@
-DIST allphot-0.8.0.tar.gz 18736642 RMD160 f17f2e6bc3d08b9e5413f8da8795d2bbcd63e519 SHA1 0f79178a6a21544a8bfd91b5aa49e292adb55b14 SHA256 3afc8f6f3b290558d2ad0a56905a0ccf93af8b0d0e2ce92d5e8f5ce2c429514b
-EBUILD allphot-0.8.0.ebuild 485 RMD160 cb2b17e4b2e5f03913817822b79de9327c75833c SHA1 335658b797460a080345315ce2ea712f5fed25fb SHA256 fde7dab61dbaa3c2deb1a02e0e7e0e6febbcf5f10fe07e3d0ed5275cb626aaed
-MISC ChangeLog 436 RMD160 e724cf56309b6824eefc87c0cbeff8d46e4b9266 SHA1 4bc4ee26449e54394639efa2f2f98c2bf70cf5b6 SHA256 a89bbf1c5f97421c9a8b061664be08fe3654e2dd7023790c23c8fee26603c2c8
-MISC metadata.xml 480 RMD160 4b4f7a0d0663c4045b0d0c948f711ae1652a8d63 SHA1 5002298ddb57008e164f75283c5a1b32f78a4446 SHA256 9e26bd20e37897cb7f2fa4a2aa1bd1e09c841a4764cb5a6bd99c718ab634ec98
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST allphot-0.8.1.tar.gz 18738068 SHA256 880ad0a6dec0ef9ddf1cc4191bb9f1a8bef1541842104cfbcac7df68ad3f5cbc SHA512 048701da4433c1e6f00d849a63a6a23033e63aa37dafa133052dcaa0b4467f504dd1525a7b9f6b8bd65772f5fa12546bbcaef9e3a0c11f4aa945c0d30c53e8ed WHIRLPOOL 0e5f95caa92a632e5eca99f2300cde38fb2c94a720410149aab02647d72cceed210c16e7283d7cc91b706a83bb454f64bbdfddd0a4b4ef30c44266805b23052d
+EBUILD allphot-0.8.1.ebuild 509 SHA256 f93d44041dfdcd657534bbe7cafd50089ae69b3ac52c616f5bc9f7416c31ce98 SHA512 37780293d3e595a25226697edc38b7a09deebc641751c0055d0b571af60bc6e0022bdad6988f9f80606451ba1777206a77faad437bd243528a23ac1d27df5115 WHIRLPOOL 1fe189748d7eb15ba49deb12e25704f19065b97082ab6f4a01fbbcc4d4a1a628f0849c76bce5dd2550f6c13efa6012417106b4924f26547d5227d99e59e27d80
+MISC ChangeLog 436 SHA256 a89bbf1c5f97421c9a8b061664be08fe3654e2dd7023790c23c8fee26603c2c8 SHA512 c3b0b811a7d90816dea3f1bd57102aeb763341451cf4f29adac6f4fd6fc7e5859341baf2c70112c6a9806af05259f590c3a7e55e0969b0e20b3abfa3201b0a4b WHIRLPOOL 0fc07d98ef63d374f3c3b5a4553c1751b74af058181218bd0f9c81d2266cf09cd543e8b92e59de7fa46e2f494186c6e821116585a3158ff429a8b8962e2ff69a
+MISC metadata.xml 486 SHA256 1881397c256b9bb69a196f49c47b6f0957963078448daff5aed7d1acc49004cd SHA512 306f8bf56a8aa9cd5c49fae4f0527c1bd39bc14b96901803ebd0d18f72c205e2b5de57d2def873ba7899f20f0d7d380b0643f3d8c1a9a890c86bee7f5c3392f7 WHIRLPOOL 7f2d965b0937340afe27c08bf786dc9fa5939b88799160c9818656b379a6224e3e5e6f2ed824bfe6c4035e7dc7ca26eafbdb977ce2835dcdbe3b1b6e69bb04f4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlAVeJIACgkQ1ycZbhPLE2CrSACZAcvcas/+iTMzVk3RtZL8dC0N
+yioAn1oa7D/C4kVBJTwRdIuaP3sjznGC
+=ZOL+
+-----END PGP SIGNATURE-----
