@@ -10,7 +10,7 @@ SRC_URI="http://astrowww.phys.uvic.ca/~seb/allphot/${P}.tar.gz"
 LICENSE="GPL-3"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 
 IUSE=""
 
